completed basic layouts except for meditation grid

--- a/index.html
+++ b/index.html
@@ -3,21 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playball&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/b6f6997550.js" crossorigin="anonymous"></script>
+
     <title>Calm</title>
 </head>
 <body>
     <nav>
         <h1 class="logo">calm</h1>
         <ul>
-            <li>Home</li>
-            <li>Sleep</li>
-            <li>Meditate</li>
-            <li>Music</li>
-            <li>Masterclass</li>
-            <li>Body</li>
-            <li>Scenes</li>
-            <li>Profile</li>
+            <li>
+                <i class="fas fa-home"></i>
+                <a class="active" href="#">Home</a>
+            </li>
+            <li>
+                <i class="fas fa-moon"></i>
+                <a class="active" href="#">Sleep</a>
+            </li>
+            <li>
+                <i class="fas fa-dharmachakra"></i>
+                <a class="active" href="#">Meditate</a>
+            </li>
+            <li>
+                <i class="fas fa-music"></i>
+                <a class="active" href="#">Music</a>
+            </li>
+            <li>
+                <i class="fas fa-university"></i>
+                <a class="active" href="#">Masterclass</a>
+            </li>
+            <li>
+                <i class="fas fa-child"></i>
+                <a class="active" href="#">Body</a>
+            </li>
+            <li>
+                <i class="fas fa-mountain"></i>
+                <a class="active" href="#">Scenes</a>
+            </li>
+            <li>
+                <i class="far fa-user-circle"></i>
+                <a class="active" href="#">Profile</a>
+            </li>
         </ul>
     </nav>
     <div class="body">
@@ -33,7 +61,7 @@
             </select>
         </div>
         <div class="daily">
-            <img src="" alt="">
+            <img src="./src/daily.jpg" alt="daily">
             <div class="dailyCalm">
                 <h2>Daily Calm</h2>
                 <p>Dec 2 - The Sun and the Wind</p>
@@ -41,20 +69,50 @@
         </div>
         <div class="meditations">
             <div class="meditation">
-                <img src="" alt="">
-                <h3>7 Days of Managing Stress</h3>
+                <img class="nature" src="./src/stress.jpg" alt="stress">
+                <div class="letter">
+                    <h3>7 Days of Managing Stress</h3>
+                </div>
             </div>
             <div class="meditation">
-                <img src="" alt="">
+                <img class="nature" src="./src/gratitude.jpg" alt="gratitude">
                 <h3>7 Days of Gratitude</h3>
             </div>
             <div class="meditation">
-                <img src="" alt="">
+                <img class="nature" src="./src/anxiety.jpg" alt="anxiety">
                 <h3>7 Days of Calming Anxiety</h3>
             </div>
             <div class="meditation">
-                <img src="" alt="">
+                <img class="nature" src="./src/selfEsteem.jpg" alt="selfEsteem">
                 <h3>7 Days of Self-Esteem</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/panic.jpg" alt="panic">
+                <h3>Panic SOS</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/Sleep.jpg" alt="Sleep">
+                <h3>Letting Go into Sleep</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/stress.jpg" alt="stress">
+                <h3>7 Days of Managing Stress</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/gratitude.jpg" alt="gratitude">
+                <h3>7 Days of Gratitude</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/anxiety.jpg" alt="anxiety">
+                <h3>7 Days of Calming Anxiety</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/selfEsteem.jpg" alt="selfEsteem">
+                <h3>7 Days of Self-Esteem</h3>
+            </div>
+            <div class="meditation">
+                <img class="nature" src="./src/panic.jpg" alt="panic">
+                <h3 class="panic">Panic SOS</h3>
             </div>
         </div>
     </div>
