--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
     <title>Calm</title>
 </head>
 <body>
-    <nav>
+    <nav class="nav">
         <h1 class="logo">calm</h1>
         <ul>
             <li>
                 <i class="fas fa-home"></i>
-                <a class="active" href="#">Home</a>
+                <a href="#">Home</a>
             </li>
             <li>
                 <i class="fas fa-moon"></i>
-                <a class="active" href="#">Sleep</a>
+                <a href="#">Sleep</a>
             </li>
-            <li>
+            <li class="active">
                 <i class="fas fa-dharmachakra"></i>
-                <a class="active" href="#">Meditate</a>
+                <a href="#">Meditate</a>
             </li>
             <li>
                 <i class="fas fa-music"></i>
-                <a class="active" href="#">Music</a>
+                <a href="#">Music</a>
             </li>
             <li>
                 <i class="fas fa-university"></i>
-                <a class="active" href="#">Masterclass</a>
+                <a href="#">Masterclass</a>
             </li>
             <li>
                 <i class="fas fa-child"></i>
-                <a class="active" href="#">Body</a>
+                <a href="#">Body</a>
             </li>
             <li>
                 <i class="fas fa-mountain"></i>
-                <a class="active" href="#">Scenes</a>
+                <a href="#">Scenes</a>
             </li>
             <li>
                 <i class="far fa-user-circle"></i>
-                <a class="active" href="#">Profile</a>
+                <a href="#">Profile</a>
             </li>
         </ul>
     </nav>
@@ -163,18 +163,6 @@
                 <div class="letter">
                     <h3>7 Days of Gratitude</h3>
                 </div>              
-            </div>
-            <div class="meditation">
-                <img class="nature" src="./src/anxiety.jpg" alt="anxiety">
-                <div class="letter">
-                    <h3>7 Days of Calming Anxiety</h3>
-                </div>                
-            </div>
-            <div class="meditation">
-                <img class="nature" src="./src/selfEsteem.jpg" alt="selfEsteem">
-                <div class="letter">
-                    <h3>7 Days of Self-Esteem</h3>
-                </div>               
             </div>
             
         </div>
