Completed responsive design using css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <nav class="nav">
-        <h1 class="logo">calm</h1>
+        <div class="logo-back">
+            <h1 class="logo">calm</h1>
+            <i class="fas fa-bars fa-lg"></i>
+        </div>
         <ul>
             <li>
                 <i class="fas fa-home"></i>
@@ -44,7 +47,7 @@
             </li>
             <li>
                 <i class="far fa-user-circle"></i>
-                <a href="#">Profile</a>
+                <a href="#">Login</a>
             </li>
         </ul>
     </nav>
