--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <nav class="nav">
         <div class="logo-back">
             <h1 class="logo">calm</h1>
-            <i class="fas fa-bars fa-lg"></i>
+            <div class="burger">
+                <i class="fas fa-bars fa-lg"></i>
+            </div>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li>
                 <i class="fas fa-home"></i>
                 <a href="#">Home</a>
@@ -170,5 +172,7 @@
             
         </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
