--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="fas fa-bars fa-lg"></i>
             </div>
         </div>
-        <ul class="nav-links">
+        <ul id="nav-links">
             <li>
                 <i class="fas fa-home"></i>
                 <a href="#">Home</a>
