fixed height problem

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="fas fa-bars fa-lg"></i>
             </div>
         </div>
-        <ul id="nav-links">
+        <ul id="nav-links" style="transform: translateX(100%);">
             <li>
                 <i class="fas fa-home"></i>
                 <a href="#">Home</a>
@@ -27,7 +27,7 @@
                 <i class="fas fa-moon"></i>
                 <a href="#">Sleep</a>
             </li>
-            <li class="active">
+            <li>
                 <i class="fas fa-dharmachakra"></i>
                 <a href="#">Meditate</a>
             </li>
