added meditation application feature

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <h3>7 Days of Managing Stress</h3>
                 </div>
             </div>
-            <div class="meditation">
+            <div class="meditation" onclick= "myhref('./meditation-app/index.html');">
                 <img class="nature" src="./src/gratitude.jpg" alt="gratitude">
                 <div class="letter">
-                    <h3>7 Days of Gratitude</h3>
+                    <h3>Sounds of Nature<h3>
                 </div>
             </div>
             <div class="meditation">
@@ -169,7 +169,6 @@
                     <h3>7 Days of Gratitude</h3>
                 </div>              
             </div>
-            
         </div>
     </div>
 
